Add EF Core entities and AutoMapper profiles
- Added `DbContext` class to manage database entities.
- Introduced `Customer`, `Order`, `OrderDetail`, and `Product` classes with data annotations.
- Created `CustomerIn`, `CustomerOut`, `OrderDetailIn`, `OrderDetailOut`, `OrderIn`, `OrderOut`, `ProductIn`, and `ProductOut` classes with validation attributes.
- Configured AutoMapper mappings in `MappingProfiles`.
- Updated project files to include necessary references.
- Modified `Program.cs` to initialize `WebApplicationBuilder`.

--- a/samples/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/samples/Framework.Sample.App/Framework.Sample.App.csproj
@@ -7,4 +7,12 @@
     <OutputType>Exe</OutputType>
     <StartupObject>Framework.Sample.App.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\TCPOS.EntityFramework\TCPOS.EntityFramework.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
