Add HttpRequest extensions and update route handling
- Added new using directives in `HttpRequestExtensions.cs`.
- Introduced `Framework.Sample.App.DataBind` namespace.
- Created `HttpRequestExtensions` class with methods to parse route values.
- Removed redundant using directives in `RouteConfigurationData.cs`.
- Updated `RouteConfigurationData` to use new extension methods.
- Added project reference to `TCPOS.AspNetCore.DataBind.OData`.
- Added `TCPOS.Common` project to the solution.
- Updated `Program.cs` for data binding and batch operations.

--- a/samples/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/samples/Framework.Sample.App/Framework.Sample.App.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\TCPOS.AspNetCore.DataBind.OData\TCPOS.AspNetCore.DataBind.OData.csproj" />
     <ProjectReference Include="..\..\src\TCPOS.AspNetCore.DataBind\TCPOS.AspNetCore.DataBind.csproj" />
     <ProjectReference Include="..\..\src\TCPOS.EntityFramework\TCPOS.EntityFramework.csproj" />
   </ItemGroup>
