Refactor entities and update data binding services
Refactored `Customer`, `Order`, `OrderDetail`, and `Product`
classes to implement `IDEntity` interface and added
`PrimaryKeyField` attribute to their `Id` properties. Updated
`Framework.Sample.App.csproj` to include a new project
reference to `TCPOS.AspNetCore.DataBind.Implementations.csproj`
and noted a potential duplicate reference to
`TCPOS.AspNetCore.DataBind.OData.csproj`. Modified `Program.cs`
to update `using` directives and configure data binding, data
pull-out, and batch processing services for the entities.
Removed commented-out batch item configurations for `Abc` entity.

--- a/samples/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/samples/Framework.Sample.App/Framework.Sample.App.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\TCPOS.AspNetCore.DataBind.OData\TCPOS.AspNetCore.DataBind.OData.csproj" />
+    <ProjectReference Include="..\..\src\TCPOS.AspNetCore.DataBind.Implementations\TCPOS.AspNetCore.DataBind.Implementations.csproj" />
+    <ProjectReference Include="..\..\src\TCPOS.AspNetCore.DataBind.OData\TCPOS.AspNetCore.DataBind.Implementations.csproj" />
     <ProjectReference Include="..\..\src\TCPOS.AspNetCore.DataBind\TCPOS.AspNetCore.DataBind.csproj" />
     <ProjectReference Include="..\..\src\TCPOS.EntityFramework\TCPOS.EntityFramework.csproj" />
   </ItemGroup>
