Add configuration management and database setup
Introduced new classes for configuration management, including `Configuration`, `DatabaseConnection`, `Debug`, and `DatabaseTypes` enum. Updated `RouteConfigurationData` to modify the route for `DataPullOutGet`. Enhanced `Program` to load configuration, conditionally recreate the database, and configure the database context. Updated project file to include necessary packages and ensure configuration files are copied. Added sample configuration file.

--- a/samples/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/samples/Framework.Sample.App/Framework.Sample.App.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
   </ItemGroup>
@@ -18,6 +19,15 @@
     <ProjectReference Include="..\..\src\TCPOS.AspNetCore.DataBind.Implementations\TCPOS.AspNetCore.DataBind.Implementations.csproj" />
     <ProjectReference Include="..\..\src\TCPOS.AspNetCore.DataBind\TCPOS.AspNetCore.DataBind.csproj" />
     <ProjectReference Include="..\..\src\TCPOS.EntityFramework\TCPOS.EntityFramework.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings - sample.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
