Update config: add CreateDatabase, switch to SQLite
Added a new configuration setting `CreateDatabase` under the `Debug` section with a value of `true`. Modified `DatabaseConnection` settings: changed `DatabaseType` from `SqlServer` to `SqLite` and updated `ConnectionString` to `Data Source=.\\SampleApp.db;`.

--- a/samples/Framework.Sample.App/appsettings - sample.json
+++ b/samples/Framework.Sample.App/appsettings - sample.json
@@ -1,8 +1,9 @@
 {
   "Debug": {
+    "CreateDatabase": true
   },
   "DatabaseConnection": {
-    "DatabaseType": "SqlServer",
-    "ConnectionString": "Server=localhost;Database=demo-app;User Id=sa;Password=saPwd12345Aa!;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DatabaseType": "SqLite",
+    "ConnectionString": "Data Source=.\\SampleApp.db;"
   }
 }
