--- a/samples/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/samples/Framework.Sample.App/Framework.Sample.App.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="appsettings - sample.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
