Enhance authorization flexibility and testability
Refactor `AuthorizationManagerBatch` to fix formatting issues.
Reorganize `using` directives in `WebAppBuilderExtension.cs` and
`WebApplicationFactory.cs`. Update `AddTcposAuthorization` and
`ConfigureServices` methods to accept `WebApplicationFactoryOptions`
for conditional service configuration. Add `DisableAuthorization`
property to `WebApplicationFactoryOptions`.

Update `appsettings-sample.json` with `FillDemoData` setting. Modify
`AppTests-p.cs` to pass `DisableAuthorization` flag and set up login
for test client. Clean up `Framework.Sample.AppTests.csproj` by
removing unnecessary `ItemGroup` elements.

Introduce `FakeTcposAuthorizationHandler` for mock authorization
during testing, ensuring tests are not blocked by authorization
requirements.

--- a/Framework.Sample.App/appsettings - sample.json
+++ b/Framework.Sample.App/appsettings - sample.json
@@ -1,6 +1,7 @@
 {
   "Debug": {
-    "CreateDatabase": true
+    "CreateDatabase": true,
+    "FillDemoData": true
   },
   "DatabaseConnection": {
     "DatabaseType": "SqLite",
