--- a/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/Framework.Sample.App/Framework.Sample.App.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
     <PackageReference Include="TCPOS.AspNetCore.DataBind" Version="0.1.0" />
     <PackageReference Include="TCPOS.AspNetCore.DataBind.Implementations" Version="0.1.0" />
