--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,3 @@
-# This workflow will build a .NET Core project and deploy it to an Azure Functions App on Windows or Linux when a commit is pushed to your default branch.
-#
-# This workflow assumes you have already created the target Azure Functions app.
-# For instructions see https://learn.microsoft.com/en-us/azure/azure-functions/create-first-function-vs-code-csharp?tabs=in-process
-#
-# To configure this workflow:
-# 1. Set up the following secrets in your repository:
-#   - AZURE_FUNCTIONAPP_PUBLISH_PROFILE
-# 2. Change env variables for your configuration.
-#
-# For more information on:
-#   - GitHub Actions for Azure: https://github.com/Azure/Actions
-#   - Azure Functions Action: https://github.com/Azure/functions-action
-#   - Publish Profile: https://github.com/Azure/functions-action#using-publish-profile-as-deployment-credential-recommended
-#   - Azure Service Principal for RBAC: https://github.com/Azure/functions-action#using-azure-service-principal-for-rbac-as-deployment-credential
-#
-# For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples/tree/master/FunctionApp
-
 name: Build Sample App
 
 on:
@@ -23,7 +5,7 @@ on:
     branches: ["master", "dev/actions"]
 
 env:
-  DOTNET_VERSION: '8.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
+  DOTNET_VERSION: '8.0.x'
 
 jobs:
   build-and-deploy:
@@ -42,12 +24,12 @@ jobs:
     - name: 'Dotnet Build'
       shell: pwsh # For Linux, use bash
       run: |
-        dotnet build Framework.Sample.App.sln --configuration Release --output ./output
+        dotnet build Framework.Sample.App.sln --configuration Release
 
     - name: 'Create Test Settings'
       shell: pwsh # For Linux, use bash
       run: |
-        echo "{ \"Debug\": { \"CreateDatabase\": true, \"FillDemoData\": true }, \"DatabaseConnection\": { \"DatabaseType\": \"SqLite\", \"ConnectionString\": \"Data Source=.\\SampleApp.db;\" }}" > Framework.Sample.AppTests\bin\Debug\net8.0\appsettings.json
+        echo '{ "Debug": { "CreateDatabase": true, "FillDemoData": true }, "DatabaseConnection": { "DatabaseType": "SqLite", "ConnectionString": "Data Source=.\\SampleApp.db;" }}' > Framework.Sample.AppTests\bin\Debug\net8.0\appsettings.json
 
     - name: 'Dotnet Test'
       shell: pwsh # For Linux, use bash
