--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,10 @@ jobs:
       run: |
         echo '{ "Debug": { "CreateDatabase": true, "FillDemoData": true }, "DatabaseConnection": { "DatabaseType": "SqLite", "ConnectionString": "Data Source=.\\SampleApp.db;" }}' > Framework.Sample.AppTests\bin\Release\net8.0\appsettings.json
 
+    - name: 'Checkout'
+      run: |
+        Get-ChildItem . -Recurse
+
     - name: 'Dotnet Test'
       shell: pwsh # For Linux, use bash
       run: |
