--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: 'Create Test Settings'
       shell: pwsh # For Linux, use bash
       run: |
-        echo '{ "Debug": { "CreateDatabase": true, "FillDemoData": true }, "DatabaseConnection": { "DatabaseType": "SqLite", "ConnectionString": "Data Source=.\\SampleApp.db;" }}' > Framework.Sample.AppTests\appsettings.json
+        echo '{ "Debug": { "CreateDatabase": true, "FillDemoData": true }, "DatabaseConnection": { "DatabaseType": "SqLite", "ConnectionString": "Data Source=.\\SampleApp.db;" }}' > .\Framework.Sample.AppTests\bin\Release\net8.0\appsettings.json
 
     - name: 'Checkout'
       run: |
