--- a/Backend/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/Backend/Framework.Sample.App/Framework.Sample.App.csproj
@@ -20,8 +20,8 @@
     <PackageReference Include="TCPOS.AspNetCore.DataBind.Implementations" Version="0.1.*" />
     <PackageReference Include="TCPOS.Authorization" Version="0.1.*" />
     <PackageReference Include="TCPOS.Common" Version="0.1.*" />
-    <PackageReference Include="TCPOS.Data.Batches" Version="0.1.0" />
-    <PackageReference Include="TCPOS.EntityFramework" Version="0.1.0" />
+    <PackageReference Include="TCPOS.Data.Batches" Version="0.1.*" />
+    <PackageReference Include="TCPOS.EntityFramework" Version="0.1.*" />
   </ItemGroup>
 
   <ItemGroup>
