Introduce multi-tenancy and refactor variable types
Added multi-tenancy support in WebApplicationFactory with new TenantSettings configuration and DisposableList for managing database contexts. Refactored various classes to use 'var' for variable declarations, removed unused directives, and improved dependency injection. Updated appsettings-sample.json for tenant configurations.

--- a/Backend/Framework.Sample.App/appsettings - sample.json
+++ b/Backend/Framework.Sample.App/appsettings - sample.json
@@ -3,8 +3,27 @@
     "CreateDatabase": true,
     "FillDemoData": true
   },
-  "DatabaseConnection": {
-    "DatabaseType": "SqLite",
-    "ConnectionString": "Data Source=.\\SampleApp.db;"
-  }
+  "TenantSettings": [
+    {
+      "Tenant": "localhost:5001",
+      "DatabaseConnection": {
+        "DatabaseType": 1,
+        "ConnectionString": "Data Source=./tenant1.sqlite"
+      }
+    },
+    {
+      "Tenant": "Tenant2",
+      "DatabaseConnection": {
+        "DatabaseType": 1,
+        "ConnectionString": "Data Source=./tenant2.sqlite"
+      }
+    },
+    {
+      "Tenant": "Tenant3",
+      "DatabaseConnection": {
+        "DatabaseType": 1,
+        "ConnectionString": "Data Source=./tenant3.sqlite"
+      }
+    }
+  ]
 }
