--- a/Backend/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/Backend/Framework.Sample.App/Framework.Sample.App.csproj
@@ -34,6 +34,9 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="appsettings - sample.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
