--- a/Backend/Framework.Sample.App/Framework.Sample.App.csproj
+++ b/Backend/Framework.Sample.App/Framework.Sample.App.csproj
@@ -17,11 +17,11 @@
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
-		<PackageReference Include="TCPOS.AspNetCore.DataBind" Version="0.1.*" />
-		<PackageReference Include="TCPOS.AspNetCore.DataBind.Implementations" Version="0.1.*" />
-		<PackageReference Include="TCPOS.Authorization" Version="0.1.*" />
-		<PackageReference Include="TCPOS.Common" Version="0.1.*" />
-		<PackageReference Include="TCPOS.Data.Batches" Version="0.1.*" />
+		<PackageReference Include="TCPOS.Lib.Web.DataBind" Version="1.*-*" />
+		<PackageReference Include="TCPOS.Lib.Web.DataBind.Implementations" Version="1.*-*" />
+		<PackageReference Include="TCPOS.Lib.Authorization" Version="1.*-*" />
+		<PackageReference Include="TCPOS.Lib.Common" Version="1.*-*" />
+		<PackageReference Include="TCPOS.Lib.Data.Batches" Version="1.*-*" />
 		<PackageReference Include="TCPOS.Lib.Data.EntityFramework" Version="1.*-*" />
 	</ItemGroup>
 
