--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -41,10 +41,10 @@
     "@mui/system": "^5.14.0",
     "@mui/x-date-pickers": "^6.20.2",
     "@react-pdf/renderer": "^4.0.0",
-    "@tcpos/common-components": "^2.1.1",
-    "@tcpos/common-core": "^2.7.0",
-    "@tcpos/backoffice-components": "^5.0.0",
-    "@tcpos/backoffice-core": "^5.0.0",
+    "@tcpos/common-components": "^3.0.0",
+    "@tcpos/common-core": "^3.0.0",
+    "@tcpos/backoffice-components": "^7.0.0",
+    "@tcpos/backoffice-core": "^7.0.0",
     "@tcpos/backoffice-lang": "^2.1.0",
     "ag-grid-community": "~28.2.1",
     "ag-grid-react": "~28.2.1",
@@ -54,7 +54,7 @@
     "crypto-js": "^4.2.0",
     "deepmerge": "~4.2.2",
     "formik": "~2.2.9",
-    "framer-motion": "6.5.1",
+    "framer-motion": "^10.16.16",
     "history": "^5.3.0",
     "immer": "~9.0.16",
     "lodash": "~4.17.21",
