--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -41,10 +41,11 @@
     "@mui/system": "^5.14.0",
     "@mui/x-date-pickers": "^6.20.2",
     "@react-pdf/renderer": "^4.0.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tcpos/common-components": "^3.0.0",
-    "@tcpos/common-core": "^3.0.0",
-    "@tcpos/backoffice-components": "^7.0.0",
-    "@tcpos/backoffice-core": "^7.0.0",
+    "@tcpos/common-core": "^6.2.0",
+    "@tcpos/backoffice-components": "^9.3.0",
+    "@tcpos/backoffice-core": "^9.3.0",
     "@tcpos/backoffice-lang": "^2.6.0",
     "ag-grid-community": "~28.2.1",
     "ag-grid-react": "~28.2.1",
@@ -56,19 +57,23 @@
     "formik": "~2.2.9",
     "framer-motion": "^10.16.16",
     "history": "^5.3.0",
-    "immer": "~9.0.16",
+    "immer": "^10.1.1",
+    "inversify": "~6.0.1",
+    "inversify-logger-middleware": "~3.1.0",
     "lodash": "~4.17.21",
     "md5-file": "~5.0.0",
     "notistack": "~3.0.1",
     "prop-types": "~15.8.1",
     "react": "^18.2.0",
     "react-device-detect": "~2.2.2",
+    "react-dnd": "~16.0.1",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "~18.2.0",
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.32",
     "react-intl": "~6.4.4",
     "react-pdf-html": "2.1.2",
+    "react-redux": "^8.0.2",
     "react-refresh": "~0.14.0",
     "react-router": "~6.23.0",
     "react-router-dom": "~6.23.0",
@@ -103,7 +108,7 @@
     "mini-css-extract-plugin": "2.8.0",
     "open": "^10.0.3",
     "prop-types": "~15.8.1",
-    "react-refresh-typescript": "~2.0.9",
+    "react-refresh-typescript": "2.0.9",
     "resolve-url-loader": "~5.0.0",
     "rimraf": "^5.0.5",
     "sass": "~1.49.0",
@@ -114,9 +119,9 @@
     "ts-loader": "~9.5.1",
     "ts-node": "~10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typedoc": "~0.26.7",
-    "typedoc-plugin-markdown": "~4.2.9",
-    "typedoc-plugin-missing-exports": "~3.0.0",
+    "typedoc": "^0.28.1",
+    "typedoc-plugin-markdown": "^4.6.0",
+    "typedoc-plugin-missing-exports": "^4.0.0",
     "typescript": "^5.6.2",
     "url": "^0.11.3",
     "webpack": "^5.95.0",
